--- a/package.json
+++ b/package.json
@@ -44,9 +44,6 @@
     "vinyl-named": "^1.1.0",
     "webpack": "^4.41.2",
     "webpack-stream": "^5.2.1",
-    "zepto": "^1.2.0"
-  },
-  "dependencies": {
     "@babel/node": "^7.8.7",
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@babel/plugin-transform-runtime": "^7.7.6",
@@ -56,16 +53,16 @@
     "babel-plugin-transform-import-bangtext-node": "^0.1.4",
     "gulp-replace": "^1.0.0",
     "mkdirp": "^0.5.1",
-    "progressbar.js": "^1.1.0",
+    "raw-loader": "^4.0.1",
+    "uglifyjs-webpack-plugin": "^2.2.0"
+  },
+  "dependencies": {
     "ractive": "^1.3.12",
     "ractive-events-tap": "^0.3.2",
     "ractive-transitions-fade": "^0.3.1",
-    "raw-loader": "^4.0.1",
     "react-share": "^4.3.1",
     "request-promise": "^4.2.5",
-    "shaka-player": "^3.0.4",
-    "smoothscroll-polyfill": "^0.4.4",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "shaka-player": "^3.0.4"
   },
   "browser": {
     "fs": false,
