--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Project name",
+    "title": "OPSM Life in focus",
     "docData": "",
-    "path": "2020/10/scrolling-video-player"
+    "path": "2020/opsm-life-in-focus"
 }
